  * Stephen R. Marenka
    - Kill second set of m68k initrds, genext2fs seems to work.
    - Add /dev/null to userdevfs-dev.txt.
  * Colin Watson
    - Document 'install video=ofonly' instead of 'install-safe', which is
      going away (it caused combinatorial explosion in the yaboot prompt on
      full CDs).
    - Add fb-modules and floppy-modules to powerpc cdrom and netboot
      initrds.

 -- Joey Hess <joeyh@debian.org>  Wed, 21 Jul 2004 16:43:56 -0400

debian-installer (20040715) unstable; urgency=low

  * Sven Luther
    - Removed the -chrp image and renamed the -chrp-rs6k to -chrp,
      as the addnote doesn't stop it from working on chrp.
    - Fixed build for 2.6 -chrp kernels with builtin initrd.
      only prep is missing now.
  * Colin Watson
    - Add usb-storage-modules and scsi-common-modules to the powerpc cdrom
      initrds.
    - Add cdrom-core-modules, input-modules, firewire-core-modules, and
      scsi-core-modules to the powerpc 2.6 cdrom initrds. Should actually
      work now.
    - Add pcmcia udebs to powerpc net_drivers floppy and netboot images.
    - Move $(TREE)/usr/lib/kernel-image-$(KERNELVERSION) out of the way to
      $(TEMP)/lib when building boot images. powerpc subarchitectures that
      need to use mkvmlinuz should now be able to do so.
    - For every initrd, output an initrd.list file containing the packages
      and their versions used to construct it.
    - debootstrap-udeb is now priority optional. Add it back into monolithic
      images.
    - Drop G5 images; power4 works on G5s as of linux-kernel-di-powerpc-2.6
      0.62. Build power4 netboot 2.6 images.
    - Remove install-safe and expert-safe targets, advising people to add
      'video=ofonly' instead. The -safe targets have got rather out of hand
      on full CDs, so I'd like to think about removing them there.
    - daily-build copies the previous build before rsyncing up the new one.
      This saved 82MB of upload for my powerpc build.