@@ -99,14 +99,6 @@ name of the user, and, like before, a password.
 If at any point after installation you would like to create another
 account, use the <command>adduser</command> command.
 
-</para><para arch="s390">
-
-You need to create a user account on &arch-title; if you want to login
-over the network using telnet. The telnet server does not allow root
-logins in Debian's default configuration. However, you can use ssh
-(Secure SHell) to remotely login as root but this is not
-recommended.
-
 </para>
   </sect3>
  </sect2>
