@@ -156,11 +156,7 @@ Inter-User Communication Vehicle (IUCV) - available for VM
 </para></listitem>
 <listitem><para>
 
-qeth: OSA-Express in QDIO mode / HiperSockets - this requires
-a second initrd with the OCO modules from 
-<ulink url="http://oss.software.ibm.com/developerworks/opensource/linux390/index.shtml">developerWorks</ulink>. 
-Please read <xref linkend="ipl-tape"/> for information how to get or
-create such a second initrd.
+qeth: OSA-Express in QDIO mode / HiperSockets
 
 </para></listitem>
 </itemizedlist>
