@@ -396,20 +396,6 @@ built as modules.  Support for standard hardware is compiled into the
 kernel, so it is unlikely that you will need to configure any modules
 during installation.
 
-</para><para arch="s390">
-
-Both kernels were also built to directly support IBM's OCO modules.  You
-can simply download then from IBM's 
-<ulink url="http://oss.software.ibm.com/developerworks/opensource/linux390/index.shtml">
-developerWorks web site</ulink> and load them into the running kernel.
-Please make sure that you pick the modules for the standard kernel,
-i.e. not the ones for a kernel with the ``on-demand'' timer patch.
-
-</para><para arch="s390">
-
-The kernel config files for these subarchitectures can be found in their
-respective directories in a file named <filename>kernel-config</filename>. 
-
 </para>
 
 
