@@ -14,17 +14,10 @@ Linux for IBM eServer zSeries and S/390: Distributions</ulink>
 Redbook. The files you
 need to write to the tape are (in this order): 
 <filename>kernel.debian</filename>,
-<filename>parmfile.debian</filename>, 
-<filename>initrd.debian</filename> and optionally a second
-initrd with the OCO modules. The first three files can be downloaded
+<filename>parmfile.debian</filename> and
+<filename>initrd.debian</filename> The files can be downloaded
 from the <filename>tape</filename> sub-directory, see 
 <xref linkend="where-files"/>,
-
-</para>
-
-<para condition="FIXME">
-
-<emphasis>FIXME: talk more about the second initrd</emphasis>
 
 </para>
  </sect1>
