@@ -88,15 +88,14 @@ second is named <filename>/dev/adb</filename>.
 <itemizedlist arch="s390">
 <listitem><para>
 
-The DASD devices are named
-<filename>/dev/dasd/<replaceable>xxxx</replaceable>/device</filename>
-where <replaceable>xxxx</replaceable> is the device number in
-hexadecimal notation.  The kernel that ships with &debian;
-uses devfs so the device nodes are created and removed automatically
-when DASD are attached or detached.  Please see chapter 3 in
-<ulink url="http://oss.software.ibm.com/developerworks/opensource/linux390/docu/l390dd08.pdf">
-Device Drivers and Installation Commands</ulink> for more information
-about this.
+The first DASD devices is named
+<filename>/dev/dasda</filename>.
+
+</para></listitem>
+<listitem><para>
+
+The second DASD device is named
+<filename>/dev/dasdb</filename>, and so on.
 
 </para></listitem>
 </itemizedlist>
@@ -153,10 +152,10 @@ is used by the boot loader (either SILO, or Sun's).
 
 </para><para arch="s390">
 
-&arch-title; disk partitions allow for 3 separate partitions. They are called
-<filename>/dev/dasd/<replaceable>xxxx</replaceable>/part1</filename>,
-<filename>/dev/dasd/<replaceable>xxxx</replaceable>/part2</filename> and
-<filename>/dev/dasd/<replaceable>xxxx</replaceable>/part3</filename>.
+The partitions on each disk are represented by appending a decimal
+number to the disk name: <filename>dasda1</filename> and
+<filename>dasda2</filename> represent the first and
+second partitions of the first DASD device in your system.
 
 </para>
  </sect1>
