@@ -74,7 +74,7 @@ CD users can boot from one of the CDs).
 Boot the installation system.
 
 </para></listitem>
-<listitem><para>
+<listitem arch="not-s390"><para>
 
 Select installation language.
 
@@ -92,7 +92,7 @@ Configure one network interface.
 </para></listitem>
 <listitem arch="s390"><para>
 
-Open a telnet connection to the new system.
+Open a ssh connection to the new system.
 
 </para></listitem>
 <listitem arch="s390"><para>
@@ -122,6 +122,11 @@ which can start up &debian; and/or your existing system.
 
 Load the newly installed system for the first time, and make some
 initial system settings.
+
+</para></listitem>
+<listitem arch="s390"><para>
+
+Open a ssh connection to the new system.
 
 </para></listitem>
 <listitem><para>
@@ -171,7 +176,7 @@ with either <classname>tasksel</classname> or
 systems are servers which don't really have any need for a graphical
 user interface to do their job.
 
-</para><para>
+</para><para arch="not-s390">
 
 Just be aware that the X system is completely separate from
 <classname>debian-installer</classname>, and in fact is much more
