@@ -21,6 +21,8 @@ debian-installer (20040721) UNRELEASED; urgency=low
       full CDs).
     - Add fb-modules and floppy-modules to powerpc cdrom and netboot
       initrds.
+  * Bastian Blank
+    - Update s390 manual: remove mention of second initrd and devfs.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 21 Jul 2004 16:43:56 -0400
 
